@@ -108,6 +108,7 @@ config DS_MODULE_coda
 config DS_MODULE_ext3
 	bool "ext3.ko"
 	select DS_MODULE_jbd
+	select DS_MODULE_mbcache
 	default n
 
 config DS_MODULE_ext2
