@@ -1,5 +1,5 @@
 config DS_PACKAGE_DECO
-	bool "mc 1.3.9"
+	bool "deco 1.3.9"
 	depends on DS_LANG_DE || DS_LANG_EN || ! DS_SELECTED_LANG_ONLY
 	default n
 	help
